# Mintora

./: .gitignore  README.md  nx.json  package-lock.json  package.json
apps/ai-agent/: project.json
apps/backend/: .env.example  Cargo.toml  project.json
apps/backend/src/: app_state.rs  config.rs  error.rs  main.rs
apps/backend/src/db/: mod.rs
apps/backend/src/db/models/: api_key.rs  audit_log.rs  category.rs  client.rs  conversation.rs  merchant.rs  mod.rs  payment_method.rs  refresh_token.rs  tag.rs  transaction.rs  user.rs  whatsapp_client.rs  whatsapp_conversation.rs
apps/backend/src/db/repositories/: api_key_repository.rs  mod.rs  refresh_token_repository.rs  user_repository.rs
apps/backend/src/dto/: auth.rs
apps/backend/src/middleware/: api_key_auth.rs  jwt_auth.rs  mod.rs
apps/backend/src/routes/: auth.rs  health.rs  mod.rs
apps/backend/src/utils/: api_key.rs  jwt.rs  mod.rs  password.rs
apps/chatbot/: project.json
apps/dashboard/: vite.config.mts
database/: database.dbml  schema_generated.sql
database/migrations/: 20251202072349_initial_schema.sql  20251202100000_add_auth_to_users.sql  20251202100001_create_refresh_tokens.sql  20251202100002_create_api_keys.sql  20251202170809_increase_api_key_prefix_length.sql  20251203105618_change_clients_table.sql
